--- a/config
+++ b/config
@@ -11,7 +11,7 @@
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 0 
+#font pango:monospace 0 
 
 set $mod Mod4
 
@@ -101,8 +101,7 @@ bindsym $mod+Shift+8 move container to workspace number "8"
 bindsym $mod+Shift+0 exec xbacklight -set 1
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
-bindsym $mod+Shift+r restart
-
+bindsym $mod+Shift+r reload
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
