feat: remove a keybind

--- a/config
+++ b/config
@@ -4,6 +4,7 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+font pango:monospace 0
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
@@ -16,7 +17,6 @@ set $menu wmenu-run -f "Noto Sans Regular 12"
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # Example configuration:
 #
@@ -74,7 +74,6 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     # Despite the name, also works for non-floating windows.
     # Change normal to inverse to use left mouse button for resizing and right
     # mouse button for dragging.
-    floating_modifier $mod normal
 
     # Reload the configuration file
     bindsym $mod+Shift+r reload
@@ -95,13 +94,13 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+1 workspace number 1
     bindsym $mod+2 workspace number 2
     bindsym $mod+3 workspace number 3
-    bindsym $mod+4 exec brightnessctl set 20%
-    bindsym $mod+5 exec brightnessctl set 30% 
+    bindsym $mod+4 exec brightnessctl set 10%
+    bindsym $mod+5 exec brightnessctl set 20% 
     bindsym $mod+6 exec brightnessctl set 40% 
     bindsym $mod+7 exec brightnessctl set 60% 
     bindsym $mod+8 workspace number 8
     bindsym $mod+9 exec brightnessctl set 100% 
-    bindsym $mod+0 exec brightnessctl set 1% 
+    bindsym $mod+0 exec brightnessctl set 0% 
 
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to workspace number 1
@@ -181,10 +180,6 @@ bar {
     }
 }
 
-input * {
-    xkb_options "ctrl:nocaps"
-}
-
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +3%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -3%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
@@ -193,7 +188,6 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym $mod+a exec firefox amazon.co.jp
 bindsym $mod+b exec firefox
 bindsym $mod+Shift+b exec firefox "https://fes.rakuten-bank.co.jp/MS/main/RbS?CurrentPageID=START&&COMMAND=LOGIN"
-bindsym $mod+Ctrl+b exec firefox http://mubou.seesaa.net
 bindsym $mod+c exec firefox gemini.google.com
 bindsym $mod+Shift+c exec firefox chatgpt.com
 bindsym $mod+Ctrl+c exec firefox docs.google.com/spreadsheets/d/1ECwWvDWYEH4iZL_Hy9V2Xqy0NOVmpsAP/
