--- a/config
+++ b/config
@@ -95,11 +95,11 @@ output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
     bindsym $mod+1 workspace number 1
     bindsym $mod+2 workspace number 2
     bindsym $mod+3 workspace number 3
-    bindsym $mod+4 exec brightnessctl set 10%
-    bindsym $mod+5 exec brightnessctl set 20% 
-    bindsym $mod+6 exec brightnessctl set 40% 
-    bindsym $mod+7 exec brightnessctl set 60% 
-    bindsym $mod+8 workspace number 8
+    bindsym $mod+4 exec brightnessctl set 3%
+    bindsym $mod+5 exec brightnessctl set 5% 
+    bindsym $mod+6 exec brightnessctl set 10% 
+    bindsym $mod+7 exec brightnessctl set 30% 
+    bindsym $mod+8 exec brightnessctl set 60% 
     bindsym $mod+9 exec brightnessctl set 100% 
     bindsym $mod+0 exec brightnessctl set 0% 
 
@@ -204,6 +204,7 @@ bindsym $mod+Shift+g exec firefox gakujo.shizuoka.ac.jp
 bindsym $mod+Ctrl+g exec firefox scholar.google.com
 bindsym $mod+Shift+h exec firefox https://www.lib-city-hamamatsu.jp/licsxp-opac/WOpacEsSchCmpdDispAction.do?moveToGamenId=esschcmpd
 bindsym $mod+i exec firefox discord.com/channels/@me
+bindsym $mod+Shift+i exec firefox instagram.com
 bindsym $mod+j exec firefox shonenjumpplus.com
 bindsym $mod+Shift+k exec firefox https://www.kyorindo-netsuper.jp
 bindsym $mod+Shift+l exec firefox https://linkedin.com/in/koshima
@@ -213,20 +214,20 @@ bindsym $mod+Ctrl+m exec firefox muji.com/jp/ja/store
 bindsym $mod+n exec firefox github.com/mxvish/private
 bindsym $mod+o exec firefox onedrive.live.com
 bindsym $mod+Shift+o exec firefox outlook.office.com
-bindsym $mod+p exec firefox https://plus.nhk.jp/
-bindsym $mod+Shift+p exec firefox pubmed.ncbi.nlm.nih.gov
-bindsym $mod+r exec firefox https://drive.google.com/drive/recent
+bindsym $mod+p exec firefox pubmed.ncbi.nlm.nih.gov
+bindsym $mod+r exec firefox https://drive.google.com/drive/my-drive
 bindsym $mod+Ctrl+r exec firefox https://tver.jp/mypage/fav
 bindsym $mod+Shift+Ctrl+r exec firefox https://reddit.com
 bindsym $mod+s exec firefox https://www.rakuten-sec.co.jp/ITS/V_ACT_Login.html
-bindsym $mod+Shift+s exec firefox https://ib.surugabank.co.jp/im/IBGate
-bindsym $mod+Ctrl+s exec firefox app.slack.com/client
+bindsym $mod+Shift+s exec firefox https://www.sbisec.co.jp/ETGate
+bindsym $mod+Ctrl+s exec firefox https://ib.surugabank.co.jp/im/IBGate
 bindsym $mod+t exec firefox https://todoist.com/app
 bindsym $mod+Shift+t exec firefox https://teams.microsoft.com
 bindsym $mod+Ctrl+t exec firefox translate.google.com
 bindsym $mod+u exec firefox https://opac.lib.shizuoka.ac.jp/simple/
 bindsym $mod+v exec firefox docs.google.com/spreadsheets/d/1iuQ-DxULNRZp0QisqnwkH33GpLA8dkec/
 bindsym $mod+Shift+v exec firefox vpn.inf.shizuoka.ac.jp/dana-na/auth/url_3/welcome.cgi
+bindsym $mod+w exec firefox https://web.whatsapp.com
 bindsym $mod+x exec swaylock -c 000000
 bindsym $mod+y exec firefox https://youtube.com/feed/playlists
 bindsym $mod+Shift+y exec blueman-manager
