feat: display mic

--- a/i3status.conf
+++ b/i3status.conf
@@ -12,6 +12,7 @@ general {
 }
 
 order += "volume master"
+order += "volume mic"
 order += "wireless _first_"
 order += "battery all"
 order += "tztime local"
@@ -22,6 +23,15 @@ volume master {
    device = "default"
    mixer = "Master"
    mixer_idx = 0
+}
+
+volume mic {
+        device = "default"
+        mixer = "Capture"
+        mixer_idx = 0 
+        
+        format = "mic %volume"
+        format_muted = " (%volume)"
 }
 
 wireless _first_ {
