--- a/config
+++ b/config
@@ -184,9 +184,8 @@ bindsym $mod+p exec firefox pubmed.ncbi.nlm.nih.gov
 bindsym $mod+r exec firefox https://drive.google.com/drive/my-drive
 bindsym $mod+Ctrl+r exec firefox https://tver.jp/mypage/fav
 bindsym $mod+Shift+Ctrl+r exec firefox https://reddit.com
-bindsym $mod+s exec firefox https://www.rakuten-sec.co.jp/ITS/V_ACT_Login.html
-bindsym $mod+Shift+s exec firefox https://www.sbisec.co.jp/ETGate
-bindsym $mod+Ctrl+s exec firefox https://ib.surugabank.co.jp/im/IBGate
+bindsym $mod+s exec firefox https://www.sbisec.co.jp/ETGate
+bindsym $mod+Shift+s exec firefox https://ib.surugabank.co.jp/im/IBGate
 bindsym $mod+t exec firefox https://todoist.com/app
 bindsym $mod+Shift+t exec firefox https://teams.microsoft.com
 bindsym $mod+Ctrl+t exec firefox translate.google.com
