--- a/config
+++ b/config
@@ -195,7 +195,7 @@ bindsym $mod+Shift+v exec firefox vpn.inf.shizuoka.ac.jp/dana-na/auth/url_3/welc
 bindsym $mod+w exec firefox https://web.whatsapp.com
 bindsym $mod+x exec swaylock -c 000000
 bindsym $mod+y exec firefox https://youtube.com/feed/playlists
-bindsym $mod+Shift+y exec blueman-manager
+bindsym $mod+Shift+y exec bluedevil-wizard
 
 bindsym Print exec scrot
 exec --no-startup-id fcitx5 -d
