--- a/config
+++ b/config
@@ -89,7 +89,7 @@ bindsym $mod+f fullscreen toggle
 #bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+#bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
 #bindsym $mod+space focus mode_toggle
@@ -124,8 +124,8 @@ set $ws10 "10"
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 exec brightnessctl set 1%
-bindsym $mod+5 exec brightnessctl set 4%
+bindsym $mod+4 exec brightnessctl set 3%
+bindsym $mod+5 exec brightnessctl set 5%
 bindsym $mod+6 exec brightnessctl set 8%
 bindsym $mod+7 exec brightnessctl set 15%
 bindsym $mod+8 exec brightnessctl set 30%
@@ -163,6 +163,7 @@ bindsym $mod+Shift+c exec firefox chatgpt.com
 bindsym $mod+Ctrl+c exec firefox docs.google.com/spreadsheets/d/1ECwWvDWYEH4iZL_Hy9V2Xqy0NOVmpsAP/
 bindsym $mod+Shift+d exec firefox deepl.com
 bindsym $mod+e exec firefox keybr.com
+bindsym $mod+Shift+e exec firefox keep.google.com
 bindsym $mod+g exec firefox github.com/mxvish/?tab=repositories
 bindsym $mod+Shift+g exec firefox gakujo.shizuoka.ac.jp
 bindsym $mod+Ctrl+g exec firefox scholar.google.com
@@ -198,3 +199,7 @@ bindsym $mod+Shift+y exec bluedevil-wizard
 
 bindsym Print exec scrot
 exec --no-startup-id fcitx5 -d
+
+exec --no-startup-id xset s off
+exec --no-startup-id xset s noblank
+exec --no-startup-id xset -dpms
